Fix card overflow problems.

--- a/src/article/shared/styles/_card.css
+++ b/src/article/shared/styles/_card.css
@@ -19,7 +19,6 @@
   position: absolute;
   top: -10px;
   left: 40px;
-  overflow: visible;
   padding: 0px 20px;
   background: #fff;
   color: var(--label-color);
@@ -35,7 +34,6 @@
 }
 
 .sc-card > * {
-  overflow: hidden;
   padding: 20px;
   border: 1px solid transparent;
 }
